--- a/index.html
+++ b/index.html
@@ -14,11 +14,20 @@
     </header>
 
     <nav>
-    <a href="#mensagem"> mensagem</a>
+    <a href="#mensagem"> mensagem</a>Projeto Site - Catalogo de Videos 
     <a href="#galeria">galeria</a>
     <a href="#contato">contato</a>
     </nav>
 
-    <h2></h2>
-</body>
+    <h2>"O 25 de dezembro data uma comemoração extremamente importante no Ocidente: o Natal. Nessa festividade é celebrado o nascimento de Jesus Cristo, entendido dentro do cristianismo como o filho de Deus. É comum que, no mês que antecede o Natal, sejam construídos presépios e sejam colocadas decorações natalinas, tal como a Árvore de Natal.
+Veja mais sobre "História do Natal" em: https://brasilescola.uol.com.br/natal/historia-natal.htm</h2>
+
+
+
+
+
+
+
+
+</body
 </html>
