--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
 
     <h2>"O 25 de dezembro data uma comemoração extremamente importante no Ocidente: o Natal. Nessa festividade é celebrado o nascimento de Jesus Cristo, entendido dentro do cristianismo como o filho de Deus. É comum que, no mês que antecede o Natal, sejam construídos presépios e sejam colocadas decorações natalinas, tal como a Árvore de Natal.
 Veja mais sobre "História do Natal" em: https://brasilescola.uol.com.br/natal/historia-natal.htm</h2>
+<section class="ceia do natal">
+    <h3>principais ceia</h3>
 
+    <div class="intem">
+        <img src="Decoracao-de-festa-de-Natal-rustica-com-bolo-em-formato-de-casinha-Foto-Hallstrom-Home.jpg">
+     </p> na mesa de natal tem  ser bem decorada e varias decloraçao e alimentos </p>
 
 
 
